infra/k8s/base/ceph/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceph
  labels:
    app.kubernetes.io/name: ceph
spec:
  selector:
    app.kubernetes.io/name: ceph
  ports:
    - name: s3
      port: 8080
      targetPort: s3
