infra/k8s/base/ceph/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ceph
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ceph
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchExpressions:
              - key: app.kubernetes.io/name
                operator: In
                values: [dawn, vector, clickhouse, signoz, ceph-init]
      ports:
        - protocol: TCP
          port: 8080
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ceph
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ceph
